[tool.poetry]
name = "poetry_check_a"
version = "1.0.1"
description = "Data transformations"
authors = [
    "Alexander Belikov <abelikov@gmail.com>"
]
license = "MIT"

[tool.poetry.dependencies]
python = "~3.7.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
